--- a/src/pastOrderPage/Sidebar/sidebar.css
+++ b/src/pastOrderPage/Sidebar/sidebar.css
@@ -1,8 +1,8 @@
 .sidebar {
-    top: -1.5px;
-    left: 0px;
+    top:-1.0px;
+    left: -20px;
     width: 57px;
-    height: 933px;
+    height: 130vh;
     /* UI Properties */
     background: #5861AE 0% 0% no-repeat padding-box;
     opacity: 1;
