--- a/createOrderpage/Sidebar/sidebar.css
+++ b/createOrderpage/Sidebar/sidebar.css
@@ -22,25 +22,33 @@
     background: 0% 0% no-repeat padding-box;
     opacity: 1;
 }
+.add-more{
+    width: 100px;
+    background-color: black;
+}
 
 .add {
-    top: 183px;
-    left: 10px;
-    width: 30px;
-    height: 30px;
+    left: 0px;
+    width: 57px;
+    height: 40px;
     position: absolute;
     top: 100px;
     opacity: 1;
+    background: #9a9ac3;
+   
+
+
 
 }
+
+
 .list{
-left: 0px;
-width: 56px;
-height: 47px;
+width: 35px;
 background: #FFFFFF 0% 0% no-repeat padding-box;
 opacity: 1;
-height: 40px;
+height:30px;
 position: absolute;
 top: 180px;
+left: 10px;
 
 }
