--- a/src/Landing_Page/Styles/navbar.css
+++ b/src/Landing_Page/Styles/navbar.css
@@ -4,7 +4,7 @@ body {
 }
 
 .header {
-    width: 100%;
+    width: 100vw;
     height: 60px;
     border-bottom: 3px solid #ccc;
     display: flex;
